--- a/Web_day_tieng_Anh/Views/Shared/_LoginPartial.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_LoginPartial.cshtml
@@ -18,11 +18,17 @@
 }
 else
 {
-    <li class="nav-item">
+    @* <li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    </li> *@
+        <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Login">
+            <i class="bi bi-person me-1"></i> Đăng nhập
+        </a>
+        <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Register">
+            <i class="bi bi-pencil me-1"></i> Đăng ký
+        </a>
 }
 </ul>
