--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -81,15 +84,38 @@
 
             <a class="btn-getstarted" href="courses.html">Get Started</a>
             @* <a class="btn-getstarted" href="Login.html">Login</a> *@
-            @* <a class="btn-get-started"><partial name="_LoginPartial" /></a> *@
-            
-            
-            <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Login">
-                <i class="bi bi-person me-1"></i> Đăng nhập
-            </a>
-            <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Register">
-                <i class="bi bi-pencil me-1"></i> Đăng ký
-            </a>
+            @* <partial name="_LoginPartial" /> *@
+
+
+            @if (!SignInManager.IsSignedIn(User))
+            {
+                <!-- Icons Đăng nhập/Đăng ký hiển thị khi chưa đăng nhập -->
+                <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Login">
+                    <i class="bi bi-person me-1"></i> Đăng nhập
+                </a>
+                <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Register">
+                    <i class="bi bi-pencil me-1"></i> Đăng ký
+                </a>
+            }
+            else
+            {
+                <!-- Hiển thị tên người dùng hoặc biểu tượng người dùng khi đã đăng nhập -->
+                @if (User.IsInRole("Admin"))
+                {
+                   @*  <a id="manage" class="nav-link text-dark" asp-area="Admin" asp-controller="ProductManager" asp-action="Index" title="Manage">Admin</a> *@
+                    <a id="manage" class="nav-link text-dark btn-getstarted" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="bi bi-person me-1"></i></a>
+                    <a class="btn btn-outline-dark  border-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                       @*  <i class="bi bi-box-arrow-right me-1"></i> Đăng xuất *@
+                    </a>
+                }
+                else
+                {
+                    <a id="manage" class="nav-link text-dark btn-getstarted" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="bi bi-person me-1"></i></a>
+                    <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        @* <i class="bi bi-box-arrow-right me-1"></i> Đăng xuất *@
+                    </a>
+                }
+            }
         </div>
     </header>
     <div>
