--- a/Web_day_tieng_Anh/Views/Shared/_LoginPartial.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_LoginPartial.cshtml
@@ -4,17 +4,17 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
+
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+    
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+    
+    
+        @* <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
-    </li>
+        </form> *@
+    
 }
 else
 {
@@ -30,5 +30,6 @@ else
         <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Register">
             <i class="bi bi-pencil me-1"></i> Đăng ký
         </a>
+
 }
-</ul>
+
