--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                 {
                     <a id="manage" class="nav-link text-dark btn-getstarted" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="bi bi-person me-1"></i></a>
                     <a class="btn btn-outline-dark border-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                        @* <i class="bi bi-box-arrow-right me-1"></i> Đăng xuất *@
+                        <i class="bi bi-box-arrow-right me-1"></i> Logout
                     </a>
                 }
             }
