--- a/Web_day_tieng_Anh/Views/Home/about.cshtml
+++ b/Web_day_tieng_Anh/Views/Home/about.cshtml
@@ -124,7 +124,7 @@
 
         </section><!-- /Stats About Section -->
         <!-- Testimonials Section -->
-        <section id="testimonials" class="testimonials section">
+       @*  <section id="testimonials" class="testimonials section">
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
@@ -258,7 +258,7 @@
 
             </div>
 
-        </section><!-- /Testimonials Section -->
+        </section><!-- /Testimonials Section --> *@
 
     </main>
 
