--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -12,7 +12,15 @@
     }
     @* <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li> *@
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
-   
-    
+
+    @if (User.IsInRole("Student"))
+    {
+       @* <li class="nav-item"><a class="nav-link @ManageNavPages.StudentCourseNavClass(ViewContext)" id="student-course" asp-area="Student" asp-controller="Courses">My Courses</a></li> *@
+        <a id="manage" class="nav-link" asp-area="Student" asp-controller="Courses" asp-action="Index" title="Manage">Admin</a>
+    }
+    else
+    {
+
+    }
     
 </ul>
