--- a/Web_day_tieng_Anh/Views/Home/Courses.cshtml
+++ b/Web_day_tieng_Anh/Views/Home/Courses.cshtml
@@ -89,7 +89,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                         <div class="course-item">
-                            <img src="assets/img/course-2.jpg" class="img-fluid" alt="...">
+                            <img src="~/img/course-2.jpg" class="img-fluid" alt="...">
                             <div class="course-content">
                                 <div class="d-flex justify-content-between align-items-center mb-3">
                                     <p class="category">Marketing</p>
@@ -100,7 +100,7 @@
                                 <p class="description">Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                                 <div class="trainer d-flex justify-content-between align-items-center">
                                     <div class="trainer-profile d-flex align-items-center">
-                                        <img src="assets/img/trainers/trainer-2-2.jpg" class="img-fluid" alt="">
+                                        <img src="~/img/trainers/trainer-2-2.jpg" class="img-fluid" alt="">
                                         <a href="" class="trainer-link">Lana</a>
                                     </div>
                                     <div class="trainer-rank d-flex align-items-center">
