--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -16,11 +16,11 @@
     @if (User.IsInRole("Student"))
     {
        @* <li class="nav-item"><a class="nav-link @ManageNavPages.StudentCourseNavClass(ViewContext)" id="student-course" asp-area="Student" asp-controller="Courses">My Courses</a></li> *@
-        <a id="manage" class="nav-link" asp-area="Students" asp-controller="Courses" asp-action="Index" title="Manage">Admin</a>
+        <a id="manage" class="nav-link" asp-area="Students" asp-controller="Courses" asp-action="Index" title="Manage">My Course</a>
     }
-    else
+    else if(User.IsInRole("Lecturers"))
     {
-
+        <a id="manage" class="nav-link" asp-area="Lecturer" asp-controller="Courses" asp-action="Index" title="Manage">Course management</a>
     }
     
 </ul>
