--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Register.cshtml
@@ -54,6 +54,7 @@
                 <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                     <h2 class="text-center text-black">ĐĂNG KÝ</h2>
                     <hr class="bg-light" />
+                    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
                     <!-- Full Name Input -->
                     <div class="form-floating mb-3">
@@ -141,12 +142,13 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div>
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control">
+            <div class="form-floating mb-3">
+                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control" >
                     <option disabled selected>-Select Role-</option>
                     
                 </select>
             </div>
+            
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
