update layout admin

--- a/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web_day_tieng_Anh/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -20,7 +20,7 @@
     }
     else if(User.IsInRole("Lecturers"))
     {
-        <a id="manage" class="nav-link" asp-area="Lecturer" asp-controller="Courses" asp-action="Index" title="Manage">Course management</a>
+        <a id="manage" class="nav-link" asp-area="Lecturers" asp-controller="Courses" asp-action="Index" title="Manage">Course management</a>
     }
     
 </ul>
