--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Add">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -38,7 +38,7 @@
                     @Html.DisplayFor(modelItem => item.CourseName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CourseDescription)
+                    @Html.Raw(item.CourseDescription)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Level)
@@ -50,12 +50,12 @@
                     @Html.DisplayFor(modelItem => item.Ratings)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CourseId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CourseId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CourseId">Delete</a>
+                    @* <a asp-action="Edit" asp-route-id="@item.CourseId">Edit</a> | *@
+                    <a asp-action="Details" asp-route-id="@item.CourseId">Details</a>
+                    @* <a asp-action="Delete" asp-route-id="@item.CourseId">Delete</a> *@
                 </td>
             </tr>
         }
     </tbody>
 </table>
-}
+
