--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -7,42 +7,13 @@
 <h1>Display</h1>
 
 <div>
-    <h4>Course</h4>
-    <hr />
-    <dl class="row">
-       @*  <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CourseDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CourseDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Level)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ratings)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ratings)
-        </dd> *@
-    </dl>
+    @foreach (var lesson in Model.Lessons)
+    {
+        <li>@lesson.LessonName</li>
+    }
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.CourseId">Edit</a> 
     <a asp-action="Index">Back to List</a>
 </div>
+
