--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -1,5 +1,5 @@
-﻿@* @model Web_day_tieng_Anh.Models.Course
- *@
+﻿@using Microsoft.EntityFrameworkCore.Metadata.Internal
+@model Web_day_tieng_Anh.Models.Course
 @{
     ViewData["Title"] = "Display";
 }
@@ -7,20 +7,46 @@
 <h1>Display</h1>
 
 <div>
-    @foreach (var lesson in Model.Lessons)
-    {
-        @if (lesson != null)
-        {
-            <div>
-                <h4>@lesson.LessonName</h4>
-                <p>@lesson.LessonDescription</p>
-                <p>Difficulty Level: @lesson.Comments</p>
-            </div>
-        }
-    }
+    <h4>Course</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CourseName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CourseName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CourseDescription)
+        </dt>
+        <dd class="col-sm-10">
+            
+            @Html.Raw(Model.CourseDescription)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Level)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Level)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Price)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Ratings)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Ratings)
+        </dd>
+    </dl>
+    
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CourseId">Edit</a> 
+    <a asp-action="Update" asp-route-id="@Model.CourseId">Edit</a>
+    
     <a asp-action="Index">Back to List</a>
 </div>
 
