--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -46,6 +46,7 @@
 </div>
 <div>
     <a asp-action="Update" asp-route-id="@Model.CourseId">Edit</a>
+    <a asp-action="Delete" asp-route-id="@Model.CourseId">Delete</a>
     
     <a asp-action="Index">Back to List</a>
 </div>
