--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
@@ -4,39 +4,22 @@
     ViewData["Title"] = "Display";
 }
 
-<h1>Display</h1>
+<h1>@Html.DisplayFor(model => model.LessonName)</h1>
 
 <div>
-    <h4>Lesson</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LessonName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LessonName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LessonDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LessonDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImgUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Course)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Course.CourseName)
-        </dd>
-    </dl>
+    
+    <hr/>
+    <article>
+        @Html.Raw(Model.LessonDescription)
+    </article>
+       
+        
+           
+        
+    
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.LessionId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
 </div>
