--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Index.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Index.cshtml
@@ -7,47 +7,54 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    
+    @* <a asp-action="Add">Create New</a> *@
+    
+    <a asp-controller="Lessons" asp-action="Add" asp-route-courseId="@Model.FirstOrDefault()?.CourseId" class="btn btn-primary mx-2">Add</a>
+    
+    
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
+                Serial Number
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.LessonName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LessonDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImgUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Course)
-            </th>
+            
+            
+           
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+            <tr>
+                <td class="serial-number"></td>
             <td>
                 @Html.DisplayFor(modelItem => item.LessonName)
             </td>
+            
             <td>
-                @Html.DisplayFor(modelItem => item.LessonDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImgUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.CourseName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.LessionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LessionId">Details</a> |
+                <a asp-action="Update" asp-route-id="@item.LessionId">Edit</a> |
+                <a asp-action="Display" asp-route-id="@item.LessionId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.LessionId">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<a asp-controller="Courses" asp-action="Index">Back to List</a>
+@section Scripts {
+    <script>
+        // Get all elements with class "serial-number"
+        var serialNumbers = document.querySelectorAll('.serial-number');
+
+        // Loop through each element and set its text content to the corresponding index + 1
+        serialNumbers.forEach(function (element, index) {
+            element.textContent = index + 1;
+        });
+    </script>
+}
