--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Courses/Display.cshtml
@@ -47,7 +47,7 @@
 <div>
     <a asp-action="Update" asp-route-id="@Model.CourseId">Edit</a>
     <a asp-action="Delete" asp-route-id="@Model.CourseId">Delete</a>
-    
+    <a asp-controller="Quesstions" asp-action="Index" asp-route-courseId="@Model.CourseId" class="btn btn-primary mx-2">View All Lessons</a>
     <a asp-action="Index">Back to List</a>
 </div>
 
