--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Lessons/Display.cshtml
@@ -19,7 +19,7 @@
     
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.LessionId">Edit</a> |
+    <a asp-action="Update" asp-route-id="@Model.LessionId">Edit</a> |
     
     <a asp-controller="Lessons" asp-action="Index" asp-route-courseId="@Model.CourseId">Back to list</a>
 </div>
