--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Questions/Add.cshtml
@@ -7,20 +7,36 @@
 <h1>Add</h1>
 
 <h4>Question</h4>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- TinyMCE -->
+    <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: 'textarea#tiny',
+            plugins: [
+                'a11ychecker', 'advlist', 'advcode', 'advtable', 'autolink', 'checklist', 'markdown',
+                'lists', 'link', 'image', 'charmap', 'preview', 'anchor', 'searchreplace', 'visualblocks',
+                'powerpaste', 'fullscreen', 'formatpainter', 'insertdatetime', 'media', 'table', 'help', 'wordcount'
+            ],
+            toolbar: 'undo redo | a11ycheck casechange blocks | bold italic backcolor | alignleft aligncenter alignright alignjustify |' +
+                'bullist numlist checklist outdent indent | removeformat | code table help'
+        })
+    </script>
+</head>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Add">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TestId" class="control-label"></label>
-                <select asp-for="TestId" class ="form-control" asp-items="ViewBag.TestId"></select>
-            </div>
+            <input type="hidden" asp-for="TestId" value="@ViewData["TestId"]" />
             <div class="form-group">
                 <label asp-for="QuestionContent" class="control-label"></label>
-                <input asp-for="QuestionContent" class="form-control" />
+
+                <textarea id="tiny" name="QuestionContent" class="form-control"></textarea>
                 <span asp-validation-for="QuestionContent" class="text-danger"></span>
             </div>
+            <div class="form-group">
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -29,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Questions" asp-action="Index" asp-route-testId="@ViewData["TestId"]">Back to list</a>
 </div>
 
 @section Scripts {
