--- a/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
+++ b/Web_day_tieng_Anh/Areas/Lecturers/Views/Tests/Add.cshtml
@@ -3,6 +3,23 @@
 @{
     ViewData["Title"] = "Add";
 }
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- TinyMCE -->
+    <script src="https://cdn.tiny.cloud/1/tvv1fwf3cnhtvlfxql1sp92p7vuw7mk3gj167aahzkwc68d6/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: 'textarea#tiny',
+            plugins: [
+                'a11ychecker', 'advlist', 'advcode', 'advtable', 'autolink', 'checklist', 'markdown',
+                'lists', 'link', 'image', 'charmap', 'preview', 'anchor', 'searchreplace', 'visualblocks',
+                'powerpaste', 'fullscreen', 'formatpainter', 'insertdatetime', 'media', 'table', 'help', 'wordcount'
+            ],
+            toolbar: 'undo redo | a11ycheck casechange blocks | bold italic backcolor | alignleft aligncenter alignright alignjustify |' +
+                'bullist numlist checklist outdent indent | removeformat | code table help'
+        })
+    </script>
+</head>
 
 <h1>Add</h1>
 
@@ -12,10 +29,7 @@
     <div class="col-md-4">
         <form asp-action="Add">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" class ="form-control" asp-items="ViewBag.CourseId"></select>
-            </div>
+            <input type="hidden" asp-for="CourseId" value="@ViewData["CourseId"]" />
             <div class="form-group">
                 <label asp-for="TestName" class="control-label"></label>
                 <input asp-for="TestName" class="form-control" />
@@ -23,7 +37,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="TestDescription" class="control-label"></label>
-                <input asp-for="TestDescription" class="form-control" />
+
+                <textarea id="tiny" name="TestDescription" class="form-control"></textarea>
                 <span asp-validation-for="TestDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -34,9 +49,11 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Tests" asp-action="Index" asp-route-courseId="@ViewData["CourseId"]">Back to list</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
