--- a/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
+++ b/Web_day_tieng_Anh/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="Trainers">Trainers</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Event">Event</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
-                        <li class="dropdown has-dropdown">
+                       @*  <li class="dropdown has-dropdown">
                             <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
                             <ul>
                                 <li><a href="#">Dropdown 1</a></li>
@@ -58,21 +58,21 @@
                                 <li><a href="#">Dropdown 3</a></li>
                                 <li><a href="#">Dropdown 4</a></li>
                             </ul>
-                        </li>
+                        </li> *@
                         <li class="megamenu has-dropdown">
                             <a href="#"><span>class</span> <i class="bi bi-chevron-down"></i></a>
                             <ul>
                                 <li>
-                                    <a href="#">class 10</a>
-                                <a asp-area="" asp-controller="Home" asp-action="Class10">class 10</a>
+                                 
+                                <a asp-area="" asp-controller="Home" asp-action="Class10">Class 10</a>
                             </li>
                                 <li>
 
-                                    <a href="#">class 11</a>
+                                <a asp-area="" asp-controller="Home" asp-action="Class11">Class 11</a>
                                 </li>
                                 <li>
 
-                                    <a href="#">class 12</a>
+                                <a asp-area="" asp-controller="Home" asp-action="Class12">Class 12</a>
                                 </li>
 
                             </ul>
